--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -35,11 +35,6 @@
     margin-bottom: 8em;
     justify-content: center;
     width: 70%;
-    border: 1px solid black;
-    border-radius: 5px;
-    box-shadow:  20px 20px 60px #cccccc,
-    -20px -20px 60px #ffffff;
-    
 }
 
 
@@ -73,4 +68,6 @@
 .left-side img {
     height: 100%;
     width: 100%;
+    filter: brightness(0.8);
 }
+
