--- a/styles/treatments.css
+++ b/styles/treatments.css
@@ -16,7 +16,9 @@ main{
 }
 
 header{
-    background-image: url('/assets/images/treatments/facial-massage.png');
+    background-image: url('/assets/images/treatments/facial-massage.png') !important;
+    display : flex;
+    flex-direction: column;
     width:100%;
     background-repeat: no-repeat;
     background-size: cover;
