--- a/styles/account.css
+++ b/styles/account.css
@@ -49,12 +49,10 @@ main{
 }
 
 header{
-    background-image: url('/assets/images/backgrounds/pool-overlook-valley.jpg');
-    width:100%;
-    background-repeat: no-repeat;
+    background-image: linear-gradient(180deg,rgba(5,20,1,0.6) 0%,rgba(5,20,1,0.6) 100%), url('../assets/images/treatments/hot-rocks-massage.jpeg');
     background-size: cover;
-    background-position: center;
-    height: 30vh;
+    background-position: bottom;
+    margin-bottom: 3em;
 }
 
 .tabs{
