--- a/styles/contact.css
+++ b/styles/contact.css
@@ -54,6 +54,13 @@ main {
     flex-flow: row wrap;
 }
 
+header{
+    background-image: linear-gradient(180deg,rgba(5,20,1,0.6) 0%,rgba(5,20,1,0.6) 100%), url('../assets/images/backgrounds/aroma-therapy-bath.jpeg');
+    background-size: cover;
+    background-position: bottom;
+    margin-bottom: 3em;
+}
+
 /* left side */
 main .left-side-contact {
     width: 50%;
