--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -39,6 +39,14 @@
     padding: 0;
 }
 
+header{
+    background-image: linear-gradient(180deg,rgba(5,20,1,0.6) 0%,rgba(5,20,1,0.6) 100%), url("../assets/images/backgrounds/pool-overlook-valley-sunset.jpg") !important;
+    max-height: 60vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 .container-gallery {
     width: 100%;
     display: flex;
