--- a/styles/log-in.css
+++ b/styles/log-in.css
@@ -40,12 +40,13 @@ body{
     font-family: "Roboto Regular";
     font-size: 15px;
 }
+
 header{
-    background-image: url('/assets/images/backgrounds/pool-snow-mountains.jpeg');
-    height: 50vh;
-    background-position: bottom;
+    background-image: linear-gradient(180deg,rgba(5,20,1,0.6) 0%,rgba(5,20,1,0.6) 100%), url('../assets/images/backgrounds/sauna-exterior.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: bottom;
+    margin-bottom: 3em;
 }
 
 :root {
@@ -95,6 +96,7 @@ header{
     font-size: 14px;
     display: block;
     width: 100%;
+    background-color: white;
 }
 
 .form-field input:focus {
