--- a/styles/style.css
+++ b/styles/style.css
@@ -206,7 +206,7 @@ section{
     opacity: 0;
     position: absolute;
     top:0;
-    width: 100%;
+    height: 90vh;
     margin: auto;
     padding: 1rem 4rem;
     z-index: 100;
