--- a/styles/products.css
+++ b/styles/products.css
@@ -1,36 +1,36 @@
 @font-face {
     font-family: "Roboto Regular";
-    src: url("/assets/graphic-charter/fonts/RobotoSerif_28pt-Regular.ttf");
+    src: url("../assets/graphic-charter/fonts/RobotoSerif_28pt-Regular.ttf");
 }
 
 @font-face {
     font-family: "Roboto Medium";
-    src: url("/assets/graphic-charter/fonts/RobotoSerif_28pt-Medium.ttf");
+    src: url("../assets/graphic-charter/fonts/RobotoSerif_28pt-Medium.ttf");
 }
 
 @font-face {
     font-family: "Roboto Bold";
-    src: url("/assets/graphic-charter/fonts/RobotoSerif_28pt-Bold.ttf");
+    src: url("../assets/graphic-charter/fonts/RobotoSerif_28pt-Bold.ttf");
 }
 
 @font-face {
     font-family: "Roboto Italic";
-    src: url("/assets/graphic-charter/fonts/RobotoSerif_28pt-Italic.ttf");
+    src: url("../assets/graphic-charter/fonts/RobotoSerif_28pt-Italic.ttf");
 }
 
 @font-face {
     font-family: "Roboto Medium Italic";
-    src: url("/assets/graphic-charter/fonts/RobotoSerif_28pt-MediumItalic.ttf");
+    src: url("../assets/graphic-charter/fonts/RobotoSerif_28pt-MediumItalic.ttf");
 }
 
 @font-face {
     font-family: "Roboto Thin";
-    src: url("/assets/graphic-charter/fonts/RobotoSerif_28pt-Thin.ttf");
+    src: url("../assets/graphic-charter/fonts/RobotoSerif_28pt-Thin.ttf");
 }
 
 @font-face {
     font-family: "Roboto Thin Italic";
-    src: url("/assets/graphic-charter/fonts/RobotoSerif_28pt-ThinItalic.ttf");
+    src: url("../assets/graphic-charter/fonts/RobotoSerif_28pt-ThinItalic.ttf");
 }
 
 
@@ -64,8 +64,16 @@ header{
     width: 60%;
 }
 
+h1{
+    text-align: center;
+    transform: translate(0px, -275px);
+    color:white;
+    font-family: "Roboto Bold";
+    font-size: 500%;
+}
+
 h2{
-    color : white;
+    color : #B89535;
     font-size: 500%;
     font-family: "Roboto Bold";
     margin-bottom: 1em;
@@ -85,8 +93,7 @@ h4{
     font-size: 15px;
     padding: 3px;
     margin: 0;
-    color: rgb(0, 0, 0);
-
+    color: #004b62;
 }
 
 .fathers-day{
@@ -112,7 +119,12 @@ h4{
 .product-list div{
     width: 247px;
     padding: 12px;
-    text-align: center;  
+    text-align: center; 
+    color: white; 
+}
+
+.productName{
+color: #004b62;
 }
 
 button{
@@ -121,7 +133,7 @@ button{
     margin: 0;
     margin-top: 40px;
     margin-bottom: 10px;
-    padding: 5px;
+    padding: 12px;
     border: 1px solid #B89535;
 }
 
@@ -131,14 +143,11 @@ button:hover{
     margin: 0;
     margin-top: 40px;
     margin-bottom: 10px;
-    padding: 5px;
+    padding: 12px;
     border: 1px solid #B89535;
 }
 
 
-.product-select{
-    margin-bottom : 10em;
-}
 
 /*--------------------*/
 
@@ -147,6 +156,7 @@ button:hover{
     box-shadow: 0 0 1px #000;
     border-radius: 5px;
 }
+
 
 .product:hover img{
     opacity:10%;
@@ -177,3 +187,56 @@ button:hover{
         opacity: 100%;
     }
 }
+
+
+label{
+    color: #004b62;
+}
+
+#product-select {
+
+    outline:0;
+    box-shadow:none;
+    border:0!important;
+    background: white;
+    background-image: none;
+    flex: 1;
+    padding: 1em;
+    color:#B89535;
+    cursor:pointer;
+    font-size: 1em;
+    font-family: "Roboto Regular";
+    line-height: 20px;
+ }
+
+ option{
+     padding: 2em;
+ }
+
+ #product-select::-ms-expand {
+    display: none;
+ }
+ .select {
+    position: relative;
+    display: flex;
+    width: 20em;
+    height: 3em;
+    line-height: 3;
+    background: #5c6664;
+    overflow: hidden;
+    border-radius: .25em;
+ }
+ .select::after {
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0 1em;
+    background: #2b2e2e;
+    cursor:pointer;
+    pointer-events:none;
+    transition:.25s all ease;
+ }
+ .select:hover::after {
+    color: #23b499;
+ }
