--- a/styles/log-in.css
+++ b/styles/log-in.css
@@ -97,7 +97,7 @@ h1{
 }
 
 .form-field input {
-    border: 1px solid #B89535;;
+    border: 1px solid #B89535;
     border-radius: 3px;
     padding: 10px;
     margin-bottom: 5px;
