--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -39,6 +39,7 @@
     padding: 0;
 }
 
+
 header{
     background-image: linear-gradient(180deg,rgba(5,20,1,0.6) 0%,rgba(5,20,1,0.6) 100%), url("../assets/images/backgrounds/pool-overlook-valley-sunset.jpg") !important;
     max-height: 60vh;
@@ -55,11 +56,22 @@ h1{
     font-size: 500%;
 }
 
+h2{
+    color: #B89535;
+    width: 50%;
+}
+
+main{
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+
 .container-gallery {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 50px;
 }
 
 .title-gallery {
@@ -74,26 +86,79 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
+    row-gap: 50px;
+
 }
 
 .div-container {
     display: flex;
-    margin-bottom: 8em;
     justify-content: center;
-    width: 70%;
 }
 
+#sauna{
+    background-image: url('../assets/images/gallery/femme-sauna.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+}
+#ski{
+    background-image: url('../assets/images/gallery/ski.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+}
+
+#piscine{
+    background-image: url('../assets/images/gallery/piscine.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+}
+
+#savoir{
+    background-image: url('../assets/images/gallery/savoir-vivre.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+}
+
+#cave{
+    background-image: url('../assets/images/gallery/cave-a-vin.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+}
+
+#lounge{
+    background-image: url('../assets/images/gallery/lounge.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+}
+
+#chalet{
+    background-image: url('../assets/images/gallery/chalet.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+}
 
 .right-side {
-    width: 30%;
+    width: 500px;
+    height:400px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     background-color: #dbb778;
-    min-width: 502px;
-    min-height: 359px;
 }
 
 .right-side h3 {
@@ -111,9 +176,9 @@ h1{
     padding-top: 1em;
 }
 
-.left-side img {
-    height: 100%;
-    width: 100%;
+.left-side {
+    width: 70%;
+    object-fit: cover;
     filter: brightness(0.8);
 }
 
